--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -33,5 +33,11 @@
     "title": "测试配置",
     "clearHistoryStatistics": "清除历史统计数据",
     "saveAllDataToDevice": "保存数据到设备"
+  },
+  "update": {
+    "title": "发现新版本",
+    "optionalUpdateMessage": "有新版本可用，你想安装吗？",
+    "optionalInstallButtonLabel": "安装",
+    "optionalIgnoreButtonLabel": "忽略"
   }
 }
