--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -38,6 +38,7 @@
     "title": "发现新版本",
     "optionalUpdateMessage": "有新版本可用，你想安装吗？",
     "optionalInstallButtonLabel": "安装",
-    "optionalIgnoreButtonLabel": "忽略"
+    "optionalIgnoreButtonLabel": "忽略",
+    "downloadLatestVersion": "下载最新版本"
   }
 }
